# campfire

./: .env.example  .gitignore  CLAUDE.md  README.md  hugo.toml  index.xml
.github/workflows/: deploy.yml
cli/: pyproject.toml
cli/campfire_cli/: main.py
cli/tests/: conftest.py  test_main.py
content/: _index.md
content/2004/: _index.md
content/2004/w01/: _index.md  a-tcpdump-tutorial-with-examples.md
content/2011/: _index.md
content/2011/w24/: _index.md  anycast-dns.md
content/2012/: _index.md
content/2012/w44/: _index.md  network-virtualization-with-vxlan.md
content/2016/: _index.md
content/2016/w40/: _index.md  i-dont-want-to-talk-to-my-cloud-provider-technodrone.md
content/2016/w42/: _index.md  principles-of-automation.md
content/2017/: _index.md
content/2017/w15/: _index.md  proper-isolation-of-a-linux-bridge.md
content/2018/: _index.md
content/2019/: _index.md
content/2020/: _index.md
content/2021/: _index.md
content/2022/: _index.md
content/2023/: _index.md
content/2024/: _index.md
content/2025/: _index.md
content/2026/: _index.md
content/about/: _index.md
content/weeks/: _index.md
layouts/: 404.html  index.html
layouts/_default/: baseof.html  index.json  list.html  rss.xml  single.html  taxonomy.html  weeks.html
layouts/about/: list.html
layouts/partials/: all-weeks.html  footer.html  head.html  header.html  link-card.html  related-links.html  search.html  tag-badge.html  tag-color.html
layouts/taxonomy/: tag.html
static/: CNAME
static/css/: style.css
static/js/: card-nav.js  search.js
(+1445 files in other folders)
